[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Cone.png" type="Texture" id=1]
[ext_resource path="res://src/Ammo/ShotgunAreaEffect.gd" type="Script" id=2]

[node name="ShotgunAreaEffect" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 199, 1 )
rotation = -1.5708
scale = Vector2( 1.43023, 1 )
texture = ExtResource( 1 )

[node name="TimeEffect" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 159.234, 101.049 )
scale = Vector2( 0.999161, 0.999488 )
polygon = PoolVector2Array( -108, -99, 135, -222, 157, -214, 173, -189, 186, -148, 190, -102, 186, -53, 175, -14, 157, 13, 136, 22 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="TimeEffect" to="." method="_on_TimeEffect_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
